--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 *.pyc
-*.js linguist-language=Scala
-*.css linguist-language=Scala
-*.html linguist-language=Scala
+*.js linguist-language=Python
+*.css linguist-language=Python
+*.html linguist-language=Python
