--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 *.pyc
-**web/AdminLTE/
-*.js linguist-language=Python
-*.css linguist-language=Python
-*.html linguist-language=Python
+*.js
+*.sql
+*.css
